// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calcFlattenedStart calculates all animationStart options 1`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 0,
    "x1": 0,
    "x2": 0,
    "x3": 0,
    "y0": 0,
    "y1": 0,
    "y2": 0,
    "y3": 0,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 2`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 9,
    "x1": 9,
    "x2": 9,
    "x3": 9,
    "y0": 0,
    "y1": 0,
    "y2": 0,
    "y3": 0,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 3`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 0,
    "x1": 0,
    "x2": 0,
    "x3": 0,
    "y0": 10,
    "y1": 10,
    "y2": 10,
    "y3": 10,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 4`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 9,
    "x1": 9,
    "x2": 9,
    "x3": 9,
    "y0": 10,
    "y1": 10,
    "y2": 10,
    "y3": 10,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 5`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 0,
    "y1": 0,
    "y2": 0,
    "y3": 0,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 6`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 10,
    "y1": 10,
    "y2": 10,
    "y3": 10,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 7`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 0,
    "x1": 0,
    "x2": 0,
    "x3": 0,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 8`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 9,
    "x1": 9,
    "x2": 9,
    "x3": 9,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart calculates all animationStart options 9`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`calcFlattenedStart matches expected output for boundArea series 1`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 2,
    "x1": 4,
    "x2": 5,
    "x3": 8,
    "y00": 0,
    "y01": 0,
    "y02": 0,
    "y03": 0,
    "y10": 0,
    "y11": 0,
    "y12": 0,
    "y13": 0,
  },
  "to": Object {
    "size": 1,
    "x0": 2,
    "x1": 4,
    "x2": 5,
    "x3": 8,
    "y00": 0,
    "y01": 0,
    "y02": 0,
    "y03": 0,
    "y10": 6,
    "y11": 9,
    "y12": 6,
    "y13": 3,
  },
}
`;

exports[`calcFlattenedStart matches expected output for xySeries 1`] = `
Object {
  "from": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 0,
    "y1": 0,
    "y2": 0,
    "y3": 0,
  },
  "to": Object {
    "size": 1,
    "x0": 5,
    "x1": 8,
    "x2": 2,
    "x3": 10,
    "y0": 6,
    "y1": 3,
    "y2": 7,
    "y3": 1,
  },
}
`;

exports[`constructArray matches expected output for boundArea series 1`] = `
Array [
  Object {
    "x": 1,
    "y0": 0,
    "y1": 2,
  },
  Object {
    "x": 5,
    "y0": 0,
    "y1": 3,
  },
  Object {
    "x": 8,
    "y0": 0,
    "y1": 7,
  },
  Object {
    "x": 15,
    "y0": 0,
    "y1": 9,
  },
]
`;

exports[`constructArray matches expected output for xySeries 1`] = `
Array [
  Object {
    "x": 1,
    "y": 2,
  },
  Object {
    "x": 5,
    "y": 4,
  },
  Object {
    "x": 8,
    "y": 6,
  },
  Object {
    "x": 15,
    "y": 9,
  },
]
`;
